Added content refresh via JS