@@ -27,10 +27,22 @@ public class indexController {
         return "main";
     }
 
+    @RequestMapping("/refresh")
+    public String refreshPage(Model model, Pageable pageable){
+
+        PageWrapper<NetworkHashrate> page = new PageWrapper<NetworkHashrate>(netService.getAllNetworks(pageable), "");
+
+        model.addAttribute("page", page);
+        model.addAttribute("networkHashrates", page.getContent());
+
+        return "main :: table-content";
+    }
+
+
     @RequestMapping("/{id}")
     public String getNetworkDetails(Model model, @PathVariable String id){
 
-        model.addAttribute("poolHashrates", netService.getAllPools(new Long(id)));
+        model.addAttribute("poolHashrates", netService.getAllPools(Long.valueOf(id)));
 
         return "networkDetails :: modalContents";
     }
